ui/field.reel/_field.css
:root {
    --fieldtitleWidth: 7rem;
}

.Field {
    position: relative;
    margin-bottom: 1em;
    min-height: 2em;
}

.Field.disabled { pointer-events: none; }

.Field + .Field { margin-top: 0; }

.Field > * {
    font-family: "Lato";
    font-size: 1em;
}

.Field-title,
.Field-control {
    display: inline-block;
}

/* Title */

.Field-title {
    font-weight: 300;
    line-height: 1.25em;
    width: var(--fieldtitleWidth);
    padding-right: 1.5em;
    margin-top: .3em;
    color: rgba(255,255,255,.8);
    transition: opacity .25s;
}

.Field.disabled .Field-title { opacity: .5; }

/* Control */

.Field-control {
    width: calc(100% - var(--fieldtitleWidth));
    margin-left: -.285rem;
    max-width: 15em;
}

/* Field-info */

.Field-info-condition {
    display: none;
    position: relative;
    height: 1em;
    margin-left: -1em;
}

.Field-info-condition.is-visible { display: inline-block; }

/* Icon Background */

.Field-info {
    margin-top: -.08em;
    position: absolute;
    font-size: 1.5em;
    top: 0;
    width:  1em;
    height: 1em;
    right: -2em;
    border-radius: 50%;
    border: 1px solid #2B9CD8;
    color: #2B9CD8;
    cursor: pointer;
    transition: all .2s ease-in-out;
    outline: none;
}

/* Icon Symbol */

.Field-info:after {
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: 'freenas';
    content: '\69';
    font-size: .5em;
    top:    0;
    bottom: 0;
    left:   0;
    right:  0;
}

/* Field Description */

.Field-info-description {
    position: absolute;
    color: #000;
    font-size: .65em;
    font-weight: 300;
    padding: .75em 1em;
    left: -.8em;
    top:    2.5em;
    width: 15em;
    border-radius: 4px;
    color: #000;
    border-radius: 0.3em;
    background: rgba(2555,255,255,1);
    box-shadow: 0 2px 4px rgba(0,0,0,.5);
    z-index: 2000;
    opacity: 0;
    visibility: hidden;
    transform: translateY(-1em);
    transition: all .25s ease-out;
}

.Field-info-description:after {
    position: absolute;
    content: '';
    background: #fff;
    height: 1.2em;
    width:  1.2em;
    left: 1em;
    top: -.5em;
    border-radius: .2em;
    transform: rotate(45deg);
    z-index: 5;
}

/* Error Message */

.Field-error {
    display: none;
    position: relative;
    width: 100%;
    background: #E0003A;
    padding: .5em;
    padding-top: .2em;
    font-weight: 300;
    color: #fff;
    border-bottom-left-radius:  4px;
    border-bottom-right-radius: 4px;
}

.Field.has-error .Field-error {
    display: block;
}

/* States */

.Field.has-error .Field-control input,
.Field.has-error .Field-control textarea {
    border-color: #E0003A;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.Field.is-validated .Field-control input,
.Field.is-validated .Field-control textarea {
    border-color: #1E963F;
}

.Field-info:hover {
    color: #fff;
    border-color: #FFF;
}

.Field-info.is-expanded {
    background: #2B9CD8;
    color: #fff;
}

.Field-info.is-expanded .Field-info-description {
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
}

